--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "no-process-exit": "off",
     "object-shorthand": "off",
     "class-methods-use-this": "off",
+    "endOfLine":"auto",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   }
 }
