--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "name": "electron-zaxestocks",
   "version": "1.0.0",
-  "description": "",
+  "description": "Database Management App for Zaxe, made with ElectronJS",
   "main": "index.js",
+  "author": {
+    "name": "JAEGER",
+    "email": "omer.kayahd@hotmail.com‎",
+    "url": "http://jaegersoftware.cf/"
+  },
+  "contributors": [
+    {
+      "name": "İsmail Emre Sırmalı",
+      "email": "lynicis@protonmail.com",
+      "url": "https://lynicis.github.io"
+    }
+  ],
+  "homepage": "https://github.com/jaeger-dvlp/zaxe-xstocks-electronjs#readme",
+  "bugs": {
+    "url": "https://github.com/jaeger-dvlp/zaxe-xstocks-electronjs/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jaeger-dvlp/zaxe-xstocks-electronjs.git"
+  },
   "scripts": {
     "start": "electron --enable-transparent-visuals .",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "test": "jest"
   },
-  "author": "JAEGER",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -23,6 +43,7 @@
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1"
   }
 }
