refactor db & add handler

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "author": {
     "name": "JAEGER",
-    "email": "omer.kayahd@hotmail.com‎",
+    "e-mail": "omer.kayahd@hotmail.com‎",
     "url": "http://jaegersoftware.cf/"
   },
   "contributors": [
     {
       "name": "İsmail Emre Sırmalı",
-      "email": "lynicis@protonmail.com",
+      "e-mail": "lynicis@protonmail.com",
       "url": "https://lynicis.github.io"
     }
   ],
