--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "author": {
     "name": "JAEGER",
-    "e-mail": "omer.kayahd@hotmail.com‎",
+    "e-mail": "omer.kayalar0101@icloud.com‎",
     "url": "http://jaegersoftware.cf/"
   },
   "contributors": [
@@ -33,7 +33,6 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "jquery": "^3.6.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
